# QtDocumentView

./: CMakeLists.txt
Document/api/include/Document/API/: Document.h  DocumentFacade.h  DocumentParser.h  DocumentRenderer.h
Document/api/src/: DocumentFacade.cpp
Document/backends/: CMakeLists.txt
Document/backends/ocr/: CMakeLists.txt
Document/backends/ocr/include/Document/Ocr/: OcrDocument.h  OcrEngine.h
Document/backends/ocr/include/Document/Ocr/engines/: TesseractOcrEngine.h
Document/backends/ocr/src/: OcrDocument.cpp
Document/backends/ocr/src/engines/: TesseractOcrEngine.cpp
Document/backends/pdf/src/: PdfDocument.cpp
Document/std/: CMakeLists.txt
Document/std/include/Document/Std/: StandardDocumentParser.h
Document/std/src/: StandardDocumentParser.cpp
Document/std/src/parser/: StandardDocumentParsing.cpp  StandardPageParsing.cpp
Document/std/src/parser/layout/: DocumentLayout.cpp  DocumentLayout.h  LineLayout.cpp  LineLayout.h  PageLayout.cpp  PageLayout.h
Document/std/src/renderer/: RenderCache.cpp  RenderCache.h  StandardDocumentRenderer.cpp  Utils.h
DocumentView/: CMakeLists.txt
DocumentView/include/DocumentView/: DocumentSelector.h
DocumentView/src/: DocumentPageItem.cpp  DocumentPageItem.h  DocumentSelector.cpp  DocumentView.cpp
examples/: main.cpp
